fix: resolve all 60 maintainability issues - constants, rename exchange(), lambda, empty constructors, unused imports, Stream.toList()